# django-bolt

./: BENCHMARK_BASELINE.md  BENCHMARK_DEV.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Fast.md  Makefile  README.md  TODO.md  llm.txt  pyproject.toml  test_minimal.py  test_minimal2.py  verify_openapi_metadata.py
.agents/django-bolt/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml
bench/: BENCHMARK_BASELINE.md  BENCHMARK_DEV.md
docs/: MIDDLEWARE.md  TESTING_UTILITIES.md  zensical.toml
docs/design/: MIDDLEWARE_DESIGN.md
docs/src/: index.md
python/django_bolt/: __init__.py  _json.py  analysis.py  api.py  binding.py  error_handlers.py  exceptions.py  health.py  middleware_response.py  pagination.py  request.py  router.py  serialization.py  status_codes.py  types.py  typing.py  views.py
python/tests/: test_ast_discovery.py  test_cors_404_and_post_only.py  test_django_middleware_integration.py  test_django_middleware_loader.py  test_global_cors.py  test_injector_types.py  test_jwt_auth.py  test_jwt_token.py  test_lifecycle_hooks.py  test_middleware.py  test_nested_simple.py  test_openapi_docs.py  test_orm_analysis.py  test_pagination_serializers.py  test_request_meta.py  test_request_with_typed_params.py  test_runbolt_dev.py  test_static_files.py  test_status_code.py  test_upload_file.py
scripts/: benchmark.sh
src/: cors.rs  dev_reload.rs  handler.rs  lib.rs  metadata.rs  request.rs  request_pipeline.rs  response_builder.rs  router.rs  server.rs  state.rs  static_files.rs  test_state.rs  testing.rs  type_coercion.rs
(+73 files in other folders)
